examples/test/testpolicy7693.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7693
  namespace: namespace227
spec:
  podSelector:
    matchLabels:
      key19: value47
      key1: value7
      key41: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value23
          key9: value42
          key34: value39
      podSelector:
        matchLabels:
          key30: value34
